--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ stages:
     - task: UseDotNet@2
       inputs:
         packageType: 'sdk'
-        version: '6.x.x'
+        version: '6.0.414'
     - script: dotnet build
     - task: PublishBuildArtifacts@1
 
