--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,27 +6,22 @@
 trigger:
 - main
 
-stages:
-- stage: Build
-  jobs:
-  - job: Build
-    pool:
-      vmImage: 'windows-latest'
-    steps:
-    - task: UseDotNet@2
-      inputs:
-        packageType: 'sdk'
-        version: '6.0.414'
-    - script: dotnet build
-    - task: PublishBuildArtifacts@1
+pool:
+  vmImage: 'windows-latest'
 
-- stage: Deploy_DEV
-  dependsOn: Build
-  jobs:
-  - deployment: DeployDev
-    environment: 'DEV'
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-          - script: kubectl apply -f deployment/dev.yaml
+steps:
+- task: UseDotNet@2
+  inputs:
+    packageType: 'sdk'
+    version: '7.0.x'
+    installationPath: $(Agent.ToolsDirectory)/dotnet
+
+- task: CmdLine@2
+  inputs:
+    script: dir src\*.csproj /s /b
+  displayName: 'List all .csproj files'
+
+- task: CmdLine@2
+  inputs:
+    script: dotnet build src/Web/Web.csproj
+  displayName: 'Build Web.csproj'
