--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
 - task: UseDotNet@2
   inputs:
     packageType: 'sdk'
-    version: '7.0.x'
+    version: '8.0.x'          # ✅ Use .NET 8.0
     installationPath: $(Agent.ToolsDirectory)/dotnet
 
 - task: CmdLine@2
