Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,8 +18,8 @@ steps:
 
 - task: CmdLine@2
   inputs:
-    script: dir src\*.csproj /s /b
-  displayName: 'List all .csproj files'
+    script: dotnet build src/Web/Web.csproj
+  displayName: 'Build Web.csproj'
 
 - task: CmdLine@2
   inputs:
