--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,9 +22,10 @@ stages:
       displayName: 'Run SonarCloud Scan'
       steps:
         - task: UseDotNet@2
+          displayName: 'Install .NET 8.0 SDK'
           inputs:
             packageType: 'sdk'
-            version: '7.0.x'
+            version: '8.0.x'
 
         - task: SonarCloudPrepare@1
           inputs:
